# PES-Fitting-MSA

./: .gitignore  README.md  collab|pip-nn-pes.ipynb  dataset.py  eval_model.py  export_model.py  genpip.py  lsqfit.py  make_dataset.py  model.py  msa.py  notes.txt  plot_dataset.py  postmsa.pl  requirements.txt  setup_environ.csh  setup_environ.sh  train.py  train_model.py  util.py
CH4-N2/long-range/: build.sh  export.cpp  main.cpp  plot_sigmoid.py
CH4-N2/reduced-svc/: CMakeLists.txt  ai_pes_ch4_n2_opt1.cpp  ai_pes_ch4_n2_opt1.hpp  basis_4_2_1_4.f90  basis_4_2_1_5.f90  load_model.hpp  lr_pes_ch4_n2.cpp  lr_pes_ch4_n2.hpp  model.pt  out.txt  radial-curve.cpp  run_cmake.sh  svc.cpp
CH4-N2/reduced-svc/curve_figs/: plotter.py  radial_curve.txt
CH4-N2/reduced-svc/figs/: plotter.py  symmpes-svc.txt
CH4-N2/reduced-svc/svc_figs/: experiment.json  nnpippes-lr-svc.txt  nnpippes-svc.txt  plotter.py
H2-H2O/: basis_2_2_1_3.f90  basis_2_2_1_4.f90
datasets/raw/: CH4-N2-EN-NONRIGID-3.xyz  CH4-N2-EN-NONRIGID-4.xyz  CH4-N2-EN-NONRIGID-5.xyz  CH4-N2-EN-NONRIGID-CH4=0-1000-N2=0-1000-LIMITS.xyz  CH4-N2-EN-NONRIGID-CH4=0-1000-N2=0-1000-TRUNCATED.xyz  CH4-N2-EN-NONRIGID-CH4=0-1000-N2=0-1000.xyz  CH4-N2-EN-NONRIGID-CH4=0-1000cm-1.xyz  CH4-N2-EN-NONRIGID-CH4=1000-2000-N2=0-1000-LIMITS.xyz  CH4-N2-EN-NONRIGID-CH4=1000-2000-N2=0-1000.xyz  CH4-N2-EN-NONRIGID-CH4=1000-2000cm-1.xyz  CH4-N2-EN-NONRIGID-CH4=2000-3000-N2=0-1000.xyz  (+7 more)
models/: .gitignore
nn-model/: Makefile  basis-maxord-2.f90  basis-maxord-4.f90  main.cpp  model.py
src/: Makefile  analyze_run.py  build_model.py  config.py  dataset.py  derivative.pl  divide_dataset.py  eval_model.py  export_model.py  genpip.py  genproc.py  make_dataset.py  memory_debug.py  plot_dataset.py  postemsa.pl  postmsa.pl  to_npz.py  train_model.py
(+72 files in other folders)
